--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     min-height: 40vh;
     border-radius: 2rem 2rem 2rem 2rem;
     padding: 4rem;
-    color: #1f2933;
+    color: #233444;
   }
   
   h2 {
