--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     margin: 0 auto;
     background: radial-gradient(var(--gradient1), var(--gradient2));
     padding: 4rem;
-    background-color: #111213;
+    background-color: black;
   }
   
   main {
