--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
-    --green: #5ed68a;
+    /*--green: #5ed68a;
     --red: #aa2222;
     --background: #fafafa;
     --gradient-1: #343e63;
-    --gradient-2: #2a3352;
+    --gradient-2: #2a3352;*/
   }
   
   html {
