--- a/style.css
+++ b/style.css
@@ -1,101 +1,95 @@
-:root {
-    --green: #5ed68a;
-    --red: #aa2222;
-    --background: #fafafa;
-    --gradient-1: #343e63;
-    --gradient-2: #2a3352;
-  }
+
+html {
+  font-size: 12px;
+  font-weight: 300;
+}
+
+body {
+  width: 90vw;
+  margin: 0 auto;
+  background: radial-gradient(var(--gradient1), var(--gradient2));
+  padding: 4rem;
+  background-color: rgba(19, 18, 18, 0.836);
+}
+
+main {
+  text-align: center;
+  background: #ffff;
+  border: solid #1F307F;
+  border-width: 8px 8px 8px 8px;
+  min-height: 20vh;
+  border-radius: 2rem 2rem 2rem 2rem;
+  padding: 4rem;
+  color: #1b339cef;
+  background-color: #8A9FFF;
+}
+
+h2 {
+  font-size: 3.2rem;
+  margin: 2rem 2rem 2rem 2rem;
+}
+
+p {
+  font-size: 1.8rem;
+}
+
+.button-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+  background: green;
+  padding: 2rem 6rem;
+  border-radius: 1rem 1rem 0 0;
+  font-size: 1.4rem;
+}
+
+button:last-child {
+  background: #3C60FF;
+  border-radius: 0 0 1rem 1rem;
   
-  html {
-    font-size: 12px;
-    font-weight: 300;
-  }
-  
+}
+
+/* game screen */
+
+h3 {
+  font-size: 2rem;
+}
+
+input {
+  border: 2px solid lightgray;
+  background: transparent;
+  margin: 2rem 0;
+  padding: 1rem 0;
+  max-width: 35rem;
+  min-width: 15rem;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.stats {
+  text-align: left;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.info span {
+  font-size: 1.6rem;
+}
+
+#newGameButton {
+  border-radius: 25px;
+}
+
+@media (min-width: 800px) {
   body {
-    width: 90vw;
-    margin: 0 auto;
-    background: radial-gradient(var(--gradient1), var(--gradient2));
-    padding: 4rem;
-    background-color: #111213;
+    width: 60vw;
   }
-  
-  main {
-    text-align: center;
-    background: var(--background);
-    border: solid var(--red);
-    border-width: 8px 8px 8px 8px;
-    min-height: 40vh;
-    border-radius: 2rem 2rem 2rem 2rem;
-    padding: 4rem;
-    color: #82a0bd;
-    background-color: #2124df71;
-  }
-  
-  h2 {
-    font-size: 3.2rem;
-    margin: 2rem 2rem 2rem 2rem;
-  }
-  
-  p {
-    font-size: 1.8rem;
-  }
-
-  .button-wrapper {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  button {
-    border: none;
-    cursor: pointer;
-    background: var(--green);
-    padding: 2rem 6rem;
-    border-radius: 1rem 1rem 0 0;
-    font-size: 1.4rem;
-  }
-  
-  button:last-child {
-    background: var(--red);
-    border-radius: 0 0 1rem 1rem;
-    
-  }
-
-  /* game screen */
-  
-  h3 {
-    font-size: 2rem;
-  }
-  
-  input {
-    border: 2px solid lightgray;
-    background: transparent;
-    margin: 2rem 0;
-    padding: 1rem 0;
-    width: 25rem;
-    text-align: center;
-    font-size: 2rem;
-  }
-
-  .stats {
-    text-align: left;
-  }
-  
-  .info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .info span {
-    font-size: 1.6rem;
-  }
-
-  #newGameButton {
-    border-radius: 0;
-  }
-  
-  @media (min-width: 800px) {
-    body {
-      width: 60vw;
-    }
-  }
+}
